--- a/app/app.css
+++ b/app/app.css
@@ -13,3 +13,30 @@ body {
     color-scheme: dark;
   }
 }
+
+
+.shine {
+  background: #eee;
+  background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+  background-size: 200% 100%;
+  animation: 1.5s shine linear infinite;
+  min-height: 20px;
+  border-radius: 5px;
+}
+
+
+.shine.shineCard {
+  height: 250px;
+}
+
+strong.shine {
+  display: block;
+  margin-bottom: 14px;
+}
+
+
+@keyframes shine {
+  to {
+    background-position-x: -200%;
+  }
+}
